tests/snapshots/formats__dmg__fat-udzo.dmg.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ fat-udzo.dmg — Apple disk image (UDIF), 10.0 MiB (20506 sectors)  [0x0+0x10cc]
    Data fork — 895 bytes  [0x0+0x37f]
  ▾ Partitions  [0x37f+0xb4d]
    ▾ whole disk (DOS_FAT_16 : 0) — 10.0 MiB, 4 chunks  [0x50d+0x229]
      ▾ Block table header (mish)  [#1:0x0+0xcc]
          Signature: "mish"  [#1:0x0+0x4]
          Version: 1  [#1:0x4+0x4]
          First sector: 0  [#1:0x8+0x8]
          Sector count: 20506  [#1:0x10+0x8]
          Data offset: 0x0  [#1:0x18+0x8]
          Buffers needed: 147  [#1:0x20+0x4]
          Block descriptors: 4294967294  [#1:0x24+0x4]
          Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [#1:0x28+0x18]
          Checksum type: CRC-32 (0x2)  [#1:0x40+0x4]
          Checksum size (bits): 32  [#1:0x44+0x4]
          Checksum: f3 07 c2 0b 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [#1:0x48+0x80]
          Chunk count: 4  [#1:0xc8+0x4]
      ▾ Chunk 0 — zlib, sectors 0..+131 (65.5 KiB) from 895 bytes  [#1:0xcc+0x28]
          Type: zlib (0x80000005)  [#1:0xcc+0x4]
          Comment: 0x41  [#1:0xd0+0x4]
          First sector: 0  [#1:0xd4+0x8]
          Sector count: 131  [#1:0xdc+0x8]
          Compressed offset: 0x0  [#1:0xe4+0x8] → 0x0+0x37f
          Compressed length: 895  [#1:0xec+0x8]
        ▾ Data — FAT16 filesystem "T", 10.0 MiB, 10196 clusters of 1.0 KiB  [0x0+0x37f]
          ▾ Boot sector (BPB) — OEM "BSD  4.4"  [#2:0x0+0x200]
              Jump instruction: eb 3c 90  |.<.|  [#2:0x0+0x3]
              OEM name: "BSD  4.4"  [#2:0x3+0x8]
              Bytes per sector: 512  [#2:0xb+0x2]
              Sectors per cluster: 2  [#2:0xd+0x1]
              Reserved sectors: 1  [#2:0xe+0x2]
              Number of FATs: 2  [#2:0x10+0x1]
              Root directory entries: 512  [#2:0x11+0x2]
              Total sectors (16-bit): 20506  [#2:0x13+0x2]
              Media descriptor: removable (1.44 MB floppy and others) (0xf0)  [#2:0x15+0x1]
              Sectors per FAT (FAT12/16): 40  [#2:0x16+0x2]
              Sectors per track: 32  [#2:0x18+0x2]
              Heads: 16  [#2:0x1a+0x2]
              Hidden sectors: 0  [#2:0x1c+0x4]
              Total sectors (32-bit): 0  [#2:0x20+0x4]
          ▾ Extended BPB  [#2:0x24+0x1a]
              Drive number: 0x0  [#2:0x24+0x1]
              Reserved: 0  [#2:0x25+0x1]
              Extended boot signature: 0x29  [#2:0x26+0x1]
              Volume serial number: 0x65b70811  [#2:0x27+0x4]
              Volume label: "T          "  [#2:0x2b+0xb]
              Filesystem type: "FAT16   "  [#2:0x36+0x8]
            Boot code — 448 bytes  [#2:0x3e+0x1c0]
            Boot signature: 0xaa55  [#2:0x1fe+0x2]
          ▾ FAT 1 — FAT16 entries  [#2:0x200+0x5000]
              Entry 0: 0xfff0 — the media descriptor, padded with ones  [#2:0x200+0x2]
              Entry 1: 0xffff — end of chain marker; cleanly unmounted, no I/O errors  [#2:0x202+0x2]
              Cluster 2: 0x3 — → 3  [#2:0x204+0x2] → #2:0xe200+0x400
              Cluster 3: 0x4 — → 4  [#2:0x206+0x2] → #2:0xe600+0x400
              Cluster 4: 0x5 — → 5  [#2:0x208+0x2] → #2:0xea00+0x400
              Cluster 5: 0xffff — end of chain  [#2:0x20a+0x2] → #2:0xee00+0x400
              Cluster 6: 0x7 — → 7  [#2:0x20c+0x2] → #2:0xf200+0x400
              Cluster 7: 0x8 — → 8  [#2:0x20e+0x2] → #2:0xf600+0x400
              Cluster 8: 0x9 — → 9  [#2:0x210+0x2] → #2:0xfa00+0x400
              Cluster 9: 0xffff — end of chain  [#2:0x212+0x2] → #2:0xfe00+0x400
              Cluster 10: 0xffff — end of chain  [#2:0x214+0x2] → #2:0x10200+0x400
              Clusters 11–10197: 0 — free  [#2:0x216+0x4f96]
              Unused — entries beyond the last cluster  [#2:0x51ac+0x54]
            FAT 2 — copy  [#2:0x5200+0x5000]
          ▾ Root directory  [#2:0xa200+0x4000]
              Volume label: "T"  [#2:0xa200+0x20]
            ▾ ._ — 4.0 KiB, modified 2026-10-06 00:39:18  [#2:0xa220+0x40]
              ▾ Long name entries — 1 entries  [#2:0xa220+0x20]
                ▾ Long name entry  [#2:0xa220+0x20]
                    Sequence number: 0x41  [#2:0xa220+0x1]
                    Name characters 1-5: "._\u{f029}"  [#2:0xa221+0xa]
                    Attributes: 0xf  [#2:0xa22b+0x1]
                    Type: 0  [#2:0xa22c+0x1]
                    Short name checksum: 0x38  [#2:0xa22d+0x1]
                    Name characters 6-11: "\u{ffff}\u{ffff}\u{ffff}\u{ffff}\u{ffff}\u{ffff}"  [#2:0xa22e+0xc]
                    First cluster (always 0): 0  [#2:0xa23a+0x2]
                    Name characters 12-13: "\u{ffff}\u{ffff}"  [#2:0xa23c+0x4]
              ▾ Directory entry  [#2:0xa240+0x20]
                  Short name: "~1"  [#2:0xa240+0xb]
                  Attributes: 0x22 [HIDDEN | ARCHIVE]  [#2:0xa24b+0x1]
                  Case flags (NT): 0x0 []  [#2:0xa24c+0x1]
                  Creation time, 10 ms units: 179  [#2:0xa24d+0x1]
                  Created: 2026-10-06 00:39:18 UTC  [#2:0xa24e+0x4]
                  Accessed: 2026-10-06 00:00:00 UTC  [#2:0xa252+0x2]
                  First cluster (high word): 0  [#2:0xa254+0x2]
                  Modified: 2026-10-06 00:39:18 UTC  [#2:0xa256+0x4]
                  First cluster (low word): 2  [#2:0xa25a+0x2]
                  File size: 4096 — 4.0 KiB  [#2:0xa25c+0x4]
              ▾ Clusters — contiguous, 4.0 KiB
                  Fragment 0 — file offset 0x0, 4.0 KiB  [#2:0xe200+0x1000]
              ▾ Content — AppleDouble, finder info, resource fork  [#2:0xe200+0x1000]
                  Magic: 0x51607  [#2:0xe200+0x4]
                  Version: 0x20000  [#2:0xe204+0x4]
                  Filler: 4d 61 63 20 4f 53 20 58 20 20 20 20 20 20 20 20  |Mac OS X        |  [#2:0xe208+0x10]
                  Number of entries: 2  [#2:0xe218+0x2]
                ▾ Finder info — 3760 bytes  [#2:0xe232+0xeb0] → #2:0xe21a+0xc
                    Entry ID: 9  [#2:0xe21a+0x4]
                    Offset: 0x32  [#2:0xe21e+0x4]
                    Length: 3760  [#2:0xe222+0x4]
                    File type: "\\x00\\x00\\x00\\x00"  [#2:0xe232+0x4]
                    Creator: "\\x00\\x00\\x00\\x00"  [#2:0xe236+0x4]
                    Finder flags: 0x0 []  [#2:0xe23a+0x2]
                    Location v: 0  [#2:0xe23c+0x2]
                    Location h: 0  [#2:0xe23e+0x2]
                    Folder: 0  [#2:0xe240+0x2]
                    Extended Finder info: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [#2:0xe242+0x10]
                  ▾ Extended attributes  [#2:0xe252+0xe90]
                      Padding: 0  [#2:0xe252+0x2]
                      Magic: "ATTR"  [#2:0xe254+0x4]
                      Debug tag: 0x0  [#2:0xe258+0x4]
                      Total size: 3810  [#2:0xe25c+0x4]
                      Data start: 0x98  [#2:0xe260+0x4]
                      Data length: 11  [#2:0xe264+0x4]
                      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00  |............|  [#2:0xe268+0xc]
                      Flags: 0x0  [#2:0xe274+0x2]
                      Number of attributes: 1  [#2:0xe276+0x2]
                      com.apple.provenance: 01 02 00 99 cd ad ea d4 24 84 76  |........$.v| — 11 bytes  [#2:0xe278+0x20] → #2:0xe298+0xb
                ▾ Resource fork — resource fork:   [#2:0xf0e2+0x11e] → #2:0xe226+0xc
                    Header  [#2:0xf0e2+0x10]
            ▾ ._hello.txt — 4.0 KiB, modified 2026-10-06 00:39:18  [#2:0xa260+0x40]
              ▾ Long name entries — 1 entries  [#2:0xa260+0x20]
                ▾ Long name entry  [#2:0xa260+0x20]
                    Sequence number: 0x41  [#2:0xa260+0x1]
                    Name characters 1-5: "._hel"  [#2:0xa261+0xa]
                    Attributes: 0xf  [#2:0xa26b+0x1]
                    Type: 0  [#2:0xa26c+0x1]
                    Short name checksum: 0x8a  [#2:0xa26d+0x1]
                    Name characters 6-11: "lo.txt"  [#2:0xa26e+0xc]
                    First cluster (always 0): 0  [#2:0xa27a+0x2]
                    Name characters 12-13: ""  [#2:0xa27c+0x4]
              ▾ Directory entry  [#2:0xa280+0x20]
                  Short name: "_HELL~4.TXT"  [#2:0xa280+0xb]
                  Attributes: 0x22 [HIDDEN | ARCHIVE]  [#2:0xa28b+0x1]
                  Case flags (NT): 0x0 []  [#2:0xa28c+0x1]
                  Creation time, 10 ms units: 0  [#2:0xa28d+0x1]
                  Created: 2026-10-06 00:39:18 UTC  [#2:0xa28e+0x4]
                  Accessed: 2026-10-06 00:00:00 UTC  [#2:0xa292+0x2]
                  First cluster (high word): 0  [#2:0xa294+0x2]
                  Modified: 2026-10-06 00:39:18 UTC  [#2:0xa296+0x4]
                  First cluster (low word): 6  [#2:0xa29a+0x2]
                  File size: 4096 — 4.0 KiB  [#2:0xa29c+0x4]
              ▾ Clusters — contiguous, 4.0 KiB
                  Fragment 0 — file offset 0x0, 4.0 KiB  [#2:0xf200+0x1000]
              ▾ Content — AppleDouble, finder info, resource fork  [#2:0xf200+0x1000]
                  Magic: 0x51607  [#2:0xf200+0x4]
                  Version: 0x20000  [#2:0xf204+0x4]
                  Filler: 4d 61 63 20 4f 53 20 58 20 20 20 20 20 20 20 20  |Mac OS X        |  [#2:0xf208+0x10]
                  Number of entries: 2  [#2:0xf218+0x2]
                ▾ Finder info — 3760 bytes  [#2:0xf232+0xeb0] → #2:0xf21a+0xc
                    Entry ID: 9  [#2:0xf21a+0x4]
                    Offset: 0x32  [#2:0xf21e+0x4]
                    Length: 3760  [#2:0xf222+0x4]
                    File type: "\\x00\\x00\\x00\\x00"  [#2:0xf232+0x4]
                    Creator: "\\x00\\x00\\x00\\x00"  [#2:0xf236+0x4]
                    Finder flags: 0x0 []  [#2:0xf23a+0x2]
                    Location v: 0  [#2:0xf23c+0x2]
                    Location h: 0  [#2:0xf23e+0x2]
                    Folder: 0  [#2:0xf240+0x2]
                    Extended Finder info: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [#2:0xf242+0x10]
                  ▾ Extended attributes  [#2:0xf252+0xe90]
                      Padding: 0  [#2:0xf252+0x2]
                      Magic: "ATTR"  [#2:0xf254+0x4]
                      Debug tag: 0x0  [#2:0xf258+0x4]
                      Total size: 3810  [#2:0xf25c+0x4]
                      Data start: 0x98  [#2:0xf260+0x4]
                      Data length: 11  [#2:0xf264+0x4]
                      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00  |............|  [#2:0xf268+0xc]
                      Flags: 0x0  [#2:0xf274+0x2]
                      Number of attributes: 1  [#2:0xf276+0x2]
                      com.apple.provenance: 01 02 00 99 cd ad ea d4 24 84 76  |........$.v| — 11 bytes  [#2:0xf278+0x20] → #2:0xf298+0xb
                ▾ Resource fork — resource fork:   [#2:0x100e2+0x11e] → #2:0xf226+0xc
                    Header  [#2:0x100e2+0x10]
            ▾ (deleted) ?B~2.T_P — deleted entry  [#2:0xa2e0+0x20]
                Short name: "åB~2.T_P"  [#2:0xa2e0+0xb]
                Attributes: 0x22 [HIDDEN | ARCHIVE]  [#2:0xa2eb+0x1]
                Case flags (NT): 0x0 []  [#2:0xa2ec+0x1]
                Creation time, 10 ms units: 186  [#2:0xa2ed+0x1]
                Created: 2026-10-06 00:39:18 UTC  [#2:0xa2ee+0x4]
                Accessed: 2026-10-06 00:00:00 UTC  [#2:0xa2f2+0x2]
                First cluster (high word): 0  [#2:0xa2f4+0x2]
                Modified: 2026-10-06 00:39:18 UTC  [#2:0xa2f6+0x4]
                First cluster (low word): 6  [#2:0xa2fa+0x2]
                File size: 4096 — 4.0 KiB  [#2:0xa2fc+0x4]
            ▾ hello.txt — 10 bytes, modified 2026-10-06 00:38:56  [#2:0xa300+0x20]
              ▾ Directory entry  [#2:0xa300+0x20]
                  Short name: "HELLO.TXT"  [#2:0xa300+0xb]
                  Attributes: 0x20 [ARCHIVE]  [#2:0xa30b+0x1]
                  Case flags (NT): 0x18 [LOWERCASE_BASE | LOWERCASE_EXT]  [#2:0xa30c+0x1]
                  Creation time, 10 ms units: 0  [#2:0xa30d+0x1]
                  Created: 2026-10-06 00:39:18 UTC  [#2:0xa30e+0x4]
                  Accessed: 2026-10-06 00:00:00 UTC  [#2:0xa312+0x2]
                  First cluster (high word): 0  [#2:0xa314+0x2]
                  Modified: 2026-10-06 00:38:56 UTC  [#2:0xa316+0x4]
                  First cluster (low word): 10  [#2:0xa31a+0x2]
                  File size: 10 — 10 bytes  [#2:0xa31c+0x4]
              ▾ Clusters — contiguous, 10 bytes
                  Fragment 0 — file offset 0x0, 10 bytes  [#2:0x10200+0xa]
              ▾ Content — UTF-8 text, LF line endings, 1 line  [#2:0x10200+0xa]
                  Encoding: "UTF-8"
                  Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
                ▾ Lines — 1 line  [#2:0x10200+0xa]
                    Line 1: "hello dmg"  [#2:0x10200+0x9]
              Unused entries — 503 free slots (end of directory)  [#2:0xa320+0x3ee0]
            Data region — 9.0 KiB  [#2:0xe200+0x2400]
          ▾ Free clusters — from the FAT
      ▾ Chunk 1 — ignore, sectors 131..+8 (4.0 KiB)  [#1:0xf4+0x28]
          Type: ignore (0x2)  [#1:0xf4+0x4]
          Comment: 0x41  [#1:0xf8+0x4]
          First sector: 131  [#1:0xfc+0x8]
          Sector count: 8  [#1:0x104+0x8]
          Compressed offset: 0x37f  [#1:0x10c+0x8] → 0x37f+0x0
          Compressed length: 0  [#1:0x114+0x8]
      ▾ Chunk 2 — ignore, sectors 139..+20367 (9.9 MiB)  [#1:0x11c+0x28]
          Type: ignore (0x2)  [#1:0x11c+0x4]
          Comment: 0x0  [#1:0x120+0x4]
          First sector: 139  [#1:0x124+0x8]
          Sector count: 20367  [#1:0x12c+0x8]
          Compressed offset: 0x0  [#1:0x134+0x8] → 0x0+0x0
          Compressed length: 0  [#1:0x13c+0x8]
      ▾ Chunk 3 — end, sectors 20506..+0 (0 bytes)  [#1:0x144+0x28]
          Type: end (0xffffffff)  [#1:0x144+0x4]
          Comment: 0x0  [#1:0x148+0x4]
          First sector: 20506  [#1:0x14c+0x8]
          Sector count: 0  [#1:0x154+0x8]
          Compressed offset: 0x0  [#1:0x15c+0x8] → 0x0+0x0
          Compressed length: 0  [#1:0x164+0x8]
  ▾ Property list — Property list (XML), dict with 1 key  [0x37f+0xb4d]
      XML declaration: "<?xml version=\"1.0\" encoding=\"UTF-8\"?>"  [0x37f+0x26]
      DOCTYPE: "<!DOCTYPE plist PUBLIC \"-//Apple//DTD PLIST 1.0//EN\" \"http://www.apple.com/DTDs/PropertyList-1.0.dtd\">"  [0x3a6+0x66]
      Version: "1.0"
    ▾ resource-fork — dict, 2 keys  [0x445+0xa75]
      ▾ blkx — array, 1 element  [0x460+0x361]
        ▾ [0] — dict, 5 keys  [0x46b+0x34b]
            Attributes: "0x0050"  [0x490+0x17]
            CFName: "whole disk (DOS_FAT_16 : 0)"  [0x4c2+0x2c]
          ▾ Data — 0x16c bytes decoded  [0x50d+0x229]
              Data  [#1:0x0+0x16c]
            ID: "0"  [0x754+0x12]
            Name: "whole disk (DOS_FAT_16 : 0)"  [0x77f+0x2c]
      ▾ plst — array, 1 element  [0x7d6+0x6db]
        ▾ [0] — dict, 4 keys  [0x7e1+0x6c5]
            Attributes: "0x0050"  [0x806+0x17]
          ▾ Data — 0x408 bytes decoded  [0x83c+0x605]
              Data  [#3:0x0+0x408]
            ID: "0"  [0xe5f+0x12]
            Name: ""  [0xe8a+0x11]
  ▾ Trailer (koly)  [0xecc+0x200]
      Signature: "koly"  [0xecc+0x4]
      Version: 4  [0xed0+0x4]
      Header size: 512  [0xed4+0x4]
      Flags: 0x1 [FLATTENED]  [0xed8+0x4]
      Running data fork offset: 0x0  [0xedc+0x8]
      Data fork offset: 0x0  [0xee4+0x8]
      Data fork length: 895 — 895 bytes  [0xeec+0x8]
      Resource fork offset: 0x0  [0xef4+0x8]
      Resource fork length: 0  [0xefc+0x8]
      Segment number: 0  [0xf04+0x4]
      Segment count: 0  [0xf08+0x4]
      Segment ID: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  |................|  [0xf0c+0x10]
      Data checksum type: none (0x0)  [0xf1c+0x4]
      Data checksum size (bits): 0  [0xf20+0x4]
      Data checksum: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0xf24+0x80]
      XML offset: 0x37f  [0xfa4+0x8]
      XML length: 2893 — 2.8 KiB  [0xfac+0x8]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0xfb4+0x78]
      Master checksum type: CRC-32 (0x2)  [0x102c+0x4]
      Master checksum size (bits): 32  [0x1030+0x4]
      Master checksum: de c6 1c 94 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x1034+0x80]
      Image variant: partition image (0x2)  [0x10b4+0x4]
      Sector count: 20506 — 10.0 MiB  [0x10b8+0x8]
      Reserved: 00 00 00 00 00 00 00 00 00 00 00 00  |............|  [0x10c0+0xc]
